--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -194,6 +194,9 @@
                     <p>Salaries tax, tax under personal assessment and profits tax will be reduced by 75% with a ceiling of $20,000 this year, Financial Secretary Paul Chan Mo-po said. </p>
                     <p>Mr. Chan said he is “very concerned about the tax burden on salary earners”, adding that tax bands will be widened and marginal tax rates will be adjusted.</p>
                     <p>“These measures aim to relieve the long-term tax burden of citizens through a structural approach and increase taxpayers' disposable income, so that they can take better care of their personal as well as family needs,” he said. </p>
+                    <br>
+                    <span class="image main"><img src="tax_light.png" style="position:center"></img></span><br/>
+
                     <p>The government will be waiving rates for four quarters of 2019-20, subject to a ceiling of $1,500 per quarter for each rateable property, wheres last year’s ceiling was $3,000.</p>
                     <p>One-off relief measures from the government this year are projected to be lesser because of the reduced surplus.</p>
                     <p>Mr. Chan announced the expected surplus of $58.7 billion for 2018-2019, but the government will be spending approximately $42.9 billion for 2019-2020, which is 73% of the surplus for one-off relief measures. This figure is higher than
@@ -201,26 +204,19 @@
                     <p>“We consider that the external environment is not very favorable, so the surplus is lower. But we do not want to scale down our commitment (towards relief measures) too much,” said Mr Chan in the press conference after the budget speech.</p>
                     <p>Financial relief measures are introduced with the objectives to “support enterprises, preserve employment, stabilise economy, and alleviate the burden of citizens”, in reaction to the slow economy performance caused by the US-China
                         trade war.</p>
+
+                    <div id="highcharts-5BPQvFACa">
+                        <script src="https://cloud.highcharts.com/inject/5BPQvFACa/" defer="defer"></script>
+                    </div>
+                    <br>
+
                     <p>As for allowances, the government will also be providing extra allowances to social security recipients, which is equivalent to one month of the standard rate Comprehensive Social Security Assistance payments, Old Age Allowance, Old
                         Age Living Allowance or Disability Allowance.</p>
                     <p>An additional $1,000 in vouchers for people who are eligible for the Elderly Health Care Voucher Scheme.</p>
                     <p>For students in need, there will be an increase in one-off grants from $2,000 to $2,500 this year. Chan also highlighted that the government will pay the public examination fee for secondary school candidates enrolled in the 2020 Hong
                         Kong Diploma of Secondary Education Examination, which will cost them $160 million.</p>
                     <p>“It’s better than nothing, but the living standard of us will not be enhanced significantly as these allowance is just a one-off basis”, said Carol Ho Po-chu, a university student who will receive the one-off grant this year.</p>
-                    <p>Despite spending a large portion of the surplus for one-off relief measures, Labour Party lawmaker Fernando Cheung Chiu-hung believes that the allocation is unfair to the needy.</p>
-                    <p>“The one-time relief measures actually benefit those ‘who have’ than ‘who have not’. For every dollar that spend for the people with disability, elderly, or with Comprehensive Social Security Assistance, $4.7 will be spent on property
-                        owners, company that makes profit or people who had at least some income and be able to pay for salary tax,” said Mr. Cheung.</p>
-                    <p>Simon Zhao Xiaobin, Founding Director of the International Centre for China Development Studies in The University of Hong Kong, suggested that the government can allocate money directly to citizens.</p>
-                    <p>“The people including governors who disagree to allocate money make a mountebank of ‘Investment in infrastructure, education for the long term’. Because citizens don't know how much the government invested, they have no way to supervise
-                        the process of receiving the grants,” Mr. Zhao said.</p>
-                    <p>“Tax welfare is the thing the government should always do. However, the surplus allocation should be the first thing that needs to be done. Surplus comes from society, and it should also be the feedback to society,” he said.</p>
-                    <p>“I think the government should use the money and resources for solving problems like healthcare and housing, rather than giving the money to the public directly,” David Ahlstrom, a Professor at The Chinese University of Hong Kong Business
-                        School, said.</p>
-
-                    <br/>
-                    <br/>
-
-
+                    <br/><br/>
                     <div class="news_page">
                         <div class="news_box container">
                             <div class="news_content_box">
@@ -341,11 +337,27 @@
                             </div>
                         </div>
                     </div>
+                    <br/><br/>
+
+
+
+                    <p>Despite spending a large portion of the surplus for one-off relief measures, Labour Party lawmaker Fernando Cheung Chiu-hung believes that the allocation is unfair to the needy.</p>
+                    <p>“The one-time relief measures actually benefit those ‘who have’ than ‘who have not’. For every dollar that spend for the people with disability, elderly, or with Comprehensive Social Security Assistance, $4.7 will be spent on property
+                        owners, company that makes profit or people who had at least some income and be able to pay for salary tax,” said Mr. Cheung.</p>
+                    <p>Simon Zhao Xiaobin, Founding Director of the International Centre for China Development Studies in The University of Hong Kong, suggested that the government can allocate money directly to citizens.</p>
+                    <p>“The people including governors who disagree to allocate money make a mountebank of ‘Investment in infrastructure, education for the long term’. Because citizens don't know how much the government invested, they have no way to supervise
+                        the process of receiving the grants,” Mr. Zhao said.</p>
+                    <p>“Tax welfare is the thing the government should always do. However, the surplus allocation should be the first thing that needs to be done. Surplus comes from society, and it should also be the feedback to society,” he said.</p>
+                    <p>“I think the government should use the money and resources for solving problems like healthcare and housing, rather than giving the money to the public directly,” David Ahlstrom, a Professor at The Chinese University of Hong Kong Business
+                        School, said.</p>
+
                     <br/>
-                    <div id="highcharts-5BPQvFACa">
-                        <script src="https://cloud.highcharts.com/inject/5BPQvFACa/" defer="defer"></script>
-                    </div>
-                    <br><br>
+                    <br/>
+
+
+
+                    <br/>
+                    <br>
                     <span class="image main"><img src="tax_light.png" style="position:center"></img></span>
                     <ul class="actions">
                         <li><a href="generic.html" class="button primary fit">View this post in TYR website</a></li>
@@ -368,7 +380,7 @@
 
                     <li><a href="https://github.com/hkbujourdmc/hkbujourdmc.github.io" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 
-                          </ul>
+                </ul>
                 <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
                     <li>&copy; 2019</li>
                     <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
