--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -196,7 +196,6 @@
                     <p>“These measures aim to relieve the long-term tax burden of citizens through a structural approach and increase taxpayers' disposable income, so that they can take better care of their personal as well as family needs,” he said. </p>
                     <br>
                     <span class="image main"><img src="tax_light.png" style="position:center"></img></span><br/>
-
                     <p>The government will be waiving rates for four quarters of 2019-20, subject to a ceiling of $1,500 per quarter for each rateable property, wheres last year’s ceiling was $3,000.</p>
                     <p>One-off relief measures from the government this year are projected to be lesser because of the reduced surplus.</p>
                     <p>Mr. Chan announced the expected surplus of $58.7 billion for 2018-2019, but the government will be spending approximately $42.9 billion for 2019-2020, which is 73% of the surplus for one-off relief measures. This figure is higher than
@@ -204,11 +203,11 @@
                     <p>“We consider that the external environment is not very favorable, so the surplus is lower. But we do not want to scale down our commitment (towards relief measures) too much,” said Mr Chan in the press conference after the budget speech.</p>
                     <p>Financial relief measures are introduced with the objectives to “support enterprises, preserve employment, stabilise economy, and alleviate the burden of citizens”, in reaction to the slow economy performance caused by the US-China
                         trade war.</p>
-
+                    <br/>
                     <div id="highcharts-5BPQvFACa">
                         <script src="https://cloud.highcharts.com/inject/5BPQvFACa/" defer="defer"></script>
-                    </div>
-                    <br>
+                    </div><br/><br/>
+
 
                     <p>As for allowances, the government will also be providing extra allowances to social security recipients, which is equivalent to one month of the standard rate Comprehensive Social Security Assistance payments, Old Age Allowance, Old
                         Age Living Allowance or Disability Allowance.</p>
@@ -357,8 +356,7 @@
 
 
                     <br/>
-                    <br>
-                    <span class="image main"><img src="tax_light.png" style="position:center"></img></span>
+
                     <ul class="actions">
                         <li><a href="generic.html" class="button primary fit">View this post in TYR website</a></li>
                         <li><a href="index.html" class="button fit">Back to the main page</a></li>
