--- a/BudgetPlan2019/elderly.html
+++ b/BudgetPlan2019/elderly.html
@@ -135,8 +135,8 @@
 
 
                     <ul class="actions">
-                        <li><a href="generic.html" class="button primary fit">View the original post in TYR website</a></li>
-                        <li><a href="generic.html" class="button fit">Back to the main page</a></li>
+                        <li><a href="#" class="button primary fit">View the original post in TYR website</a></li>
+                        <li><a href="index.html" class="button fit">Back to the main page</a></li>
                     </ul>
                 </div>
 
