--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -373,11 +373,9 @@
             <div class="inner">
                 <ul class="icons" style="margin-left: 40%;margin-right: 40%">
                     <!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-                    <li><a href="https://www.facebook.com/hkbutyr/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="https://www.instagram.com/hkbutyr/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-
-                    <li><a href="https://github.com/hkbujourdmc/hkbujourdmc.github.io" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-
+                    <li><a href="https://www.facebook.com/hkbutyr/" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/hkbutyr/" class="icon alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://github.com/hkbujourdmc/hkbujourdmc.github.io" class="icon alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
                 </ul>
                 <ul class="copyright" style="margin-left: 38%;margin-right: 40%">
                     <li>&copy; 2019</li>
