--- a/BudgetPlan2019/elderly.html
+++ b/BudgetPlan2019/elderly.html
@@ -74,22 +74,33 @@
                                 Data graphics by: Jack Lung, Judy Li
                                 </i></h4>
                     </header>
-                    <p>500 residential care places and 300 subsidised day care places for elderly will be provided in next two years as a solution to the aging Hong Kong society, announced by the Financial Secretary Paul Chan Mo-po during today’s Budget
-                        plan speech. <br><br> “It is obviously not enough. The number of waiting participants is much more than the given places, but it is better than none.” commented by Hung Kam In, district council member of Po Tat.
-                        <br><br> According to the Hong Kong Population Projections, the elderly population is estimated to rise to 19 percent in 2021, meaning there would be more than 1,400,000 elderlies at that time.
-                        <br><br> Many senior citizens are waiting for residential places in the care center or the quotas of day care services. The resources have been in insufficient for a long time, so many old people are waiting in line for the vacancies.
-                        <br><br> By the end of January 2019, there are 40,630 people registered in the waiting list for elderly care center. The estimated waiting time for the places from private homes for the elderly under the Enhanced Bought Place Scheme
-                        is about 10 months, while the vacancies for subsidised long term care services are no shorter than 39 months.
-                        <br><br> The limitations of medical care are also becoming increasingly serious as the population ages. Most elderly people need to wait for a long period of time to get treatment. For this reason, the risk of health insurance
-                        for the elderly is increased.
-                        <br><br> According to the Hospital Authority, the average waiting time for Cataract Surgery is 19 months, which includes the longest expected waiting time of two years and four months in New Territory West. Cataract is a common
-                        geriatric disease, mostly diagnosed in patients above the age of 60.
-                        <br><br> According to the Hospital Authority (HA), there are 50,731 patients waiting for cataracts in the Hospital Authority. The estimated number of new cases are about 21,000 per year. The average waiting time is about three
-                        years. HA expects that the demand for surgery will continue to grow, since those suffering from cataracts increases with age.
-                        <br><br> Mr. Chan said during the press conference that “in terms of medical training, I expect more trainees doctors to work at public hospitals”.
-                        <br><br> Hung suggested that the government should relatively loosen up the qualification for recruitment of foreign medical professionals to solve the problem of long waiting time for public medical service.
-                        <br><br> Extra one month allowance to recipients of Comprehensive Social Security Assistance (CSSA) old age allowance, old age living allowance and disability allowance will be provided. The government will also provide a one-off
-                        additional $1,000 worth of Elderly Health Care Vouchers and increase the accumulation limit of vouchers to $8,000.
+                    <div id="chartContainer2" style="width: 90%; height: 300px;display: inline-block;"></div><br/>
+
+                    <p>Five hundreds residential care places and 300 subsidised day care places for the elderly will be provided in the next two years as a solution to the aging Hong Kong society, announced Financial Secretary Paul Chan Mo-po during today’s
+                        budget speech.
+                        <br>“It is obviously not enough. The number of waiting participants is much more than the given places, but it is better than none.” commented by Hung Kam In, district council member of Po Tat.
+                        <br>According to the Hong Kong Population Projections, the elderly population is estimated to rise to 19 percent in 2021, meaning there would be more than 1,400,000 elderlies at that time.
+                        <br>There are currently 40,630 people on the waiting list for residential places in elderly care centers. Those wanting government subsidized spots wait 39 months on average, while those on the list for private homes wait 10 months,
+                        according to the Social Welfare Department.
+                        <br>According to the Hong Kong Population Projections, the elderly population is estimated to rise to 19 percent of the population in 2021, meaning there would be more than 1.4 million elderly people.
+
+                        <div id="chartContainer1" style="width: 100%; height: 500px;display: inline-block;"></div>
+
+                        <div id="chartContainer3" style="width: 100%; height: 400px;display: inline-block;"></div>
+
+                        <br>The limitations of medical care are also becoming increasingly serious as the population ages. Most elderly people need to wait for a long period of time to get treatment. For this reason, the risk of health insurance for the
+                        elderly is increased.
+                        <br>There are 50,731 patients waiting for cataract surgery in public hospitals, according to the Hospital Authority, with an average waiting time for cataract surgery of 19 months. The longest expected waiting time is two years
+                        and four months in the New Territory West District.
+
+                        <div id="chartContainer4" style="width: 100%; height: 400px;display: inline-block;"></div><br/>
+
+                        <br>According to the Hospital Authority (HA), there are 50,731 patients waiting for cataracts in the Hospital Authority. The estimated number of new cases are about 21,000 per year. The average waiting time is about three years.
+                        HA expects that the demand for surgery will continue to grow, since those suffering from cataracts increases with age.
+                        <br>Mr. Chan said during the press conference that “in terms of medical training, I expect more trainees doctors to work at public hospitals”.
+                        <br>Hung suggested that the government should relatively loosen up the qualification for recruitment of foreign medical professionals to solve the problem of long waiting time for public medical service.
+                        <br>Extra one month allowance to recipients of Comprehensive Social Security Assistance (CSSA) old age allowance, old age living allowance and disability allowance will be provided. The government will also provide a one-off additional
+                        $1,000 worth of Elderly Health Care Vouchers and increase the accumulation limit of vouchers to $8,000.
                     </p>
                     <br>
                     <ul>
@@ -106,24 +117,11 @@
                     </ul>
 
                     <br> <br>
-                    <div>
-                        <figure>
-                            <span><img src="images/el_image/unnamed.jpg" style=" height:25%; width:25%;" ></img> 
-                        
-                     <span ><img src="images/el_image/unnamed-2.jpg" style=" height:25%; width:25%; "></img> 
+                    <div style="margin: auto; text-align: center">
+                        <span><img src="images/el_image/unnamed.jpg" style="height:40%; width:40%"></img> 
+                        <span><img src="images/el_image/unnamed-2.jpg" style="height:40%; width:40%"></img> 
                         <figcaption style="color:grey">credit to Kharis Daniel Setiasabda</figcaption> </span>
-                        </figure>
                     </div>
-                    <br> <br>
-
-                    <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-                    <div id="chartContainer1" style="width: 90%; height: 500px;display: inline-block;"></div> <br><br><br><br><br>
-                    <div id="chartContainer2" style="width: 90%; height: 300px;display: inline-block;"></div><br/>
-                    <br><br><br>
-                    <div id="chartContainer3" style="width: 45%; height: 400px;display: inline-block;"></div>
-                    <div id="chartContainer4" style="width: 45%; height: 400px;display: inline-block;"></div><br/>
-
-                    <br><br>
 
                     <iframe width="90%" height="500" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col1+from+18d6QRwPjNXy1V9yhQ1D_ysN_C2qaYPs_06yZInOy&amp;viz=MAP&amp;h=false&amp;lat=22.364443305544853&amp;lng=114.19551998945732&amp;t=4&amp;z=11&amp;l=col1&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
 
@@ -165,6 +163,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 </body>
 
@@ -622,4 +621,7 @@
 
 
     }
+</script>
+
+}
 </script>
