--- a/BudgetPlan2019/elderly.html
+++ b/BudgetPlan2019/elderly.html
@@ -67,8 +67,8 @@
             <section id="one">
                 <div class="inner">
                     <header class="major">
-                        <h2>Budget 2019/20: Increasing elderly population <br>and government fails to increase resources for the elderly
-                        </h2>
+                        <!-- <h2>Increasing elderly population and government fails to increase resources for the elderly
+                        </h2> -->
                         <h4><i>Reported by: Hailey Man, Karen Kwok, Brison Li, Fang Yi Chen<br>
                                 Edited by: Anna Kam<br>
                                 Data graphics by: Jack Lung, Judy Li
