--- a/BudgetPlan2019/elderly.html
+++ b/BudgetPlan2019/elderly.html
@@ -12,6 +12,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+        hr {
+            margin-top: 0px;
+            *margin: 0;
+            border: 0;
+            color: white;
+            background-color: white;
+            height: 2px
+        }
+    </style>
 </head>
 
 <body class="is-preload">
@@ -66,14 +76,15 @@
             <!-- One -->
             <section id="one">
                 <div class="inner">
-                    <header class="major">
-                        <h2>Increasing elderly population <br>and government fails to increase resources for the elderly
-                        </h2>
-                        <h4><i>Reported by: Hailey Man, Karen Kwok, Brison Li, Fang Yi Chen<br>
+                    <!-- <header class="major"> -->
+                    <h2>Increasing elderly population <br>and government fails to increase resources for the elderly
+                    </h2>
+                    <hr>
+                    <h4><i>Reported by: Hailey Man, Karen Kwok, Brison Li, Fang Yi Chen<br>
                                 Edited by: Anna Kam<br>
                                 Data graphics by: Jack Lung, Judy Li
                                 </i></h4>
-                    </header>
+                    <!-- </header> -->
 
                     <div style="margin: auto; text-align: center">
                         <span><img src="images/el_image/unnamed.jpg" style="height:40%; width:40%"></img> 
