--- a/BudgetPlan2019/sow.html
+++ b/BudgetPlan2019/sow.html
@@ -15,7 +15,17 @@
     <link rel="shortcut icon" href="picture/socialworker_icon.png" type="image/x-icon" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <noscript>
-            <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+        hr {
+            margin-top: 0px;
+            *margin: 0;
+            border: 0;
+            color: white;
+            background-color: white;
+            height: 2px
+        }
+    </style>
 </head>
 
 <body class="is-preload">
@@ -65,12 +75,13 @@
             <section id="one">
                 <div class="inner">
 
-                    <header class="major">
-                        <h2>Budget 2019/20: Government increases amount of professional school social workers </h2>
-                        <h4><i>Reported by Cara Li, Oasis Li & Wallis Wang
+                    <!-- <header class="major"> -->
+                    <h2>Budget 2019/20: Government increases amount of professional school social workers </h2>
+                    <hr>
+                    <h4><i>Reported by Cara Li, Oasis Li & Wallis Wang
                             <br>Edited by Katherine Li
 			                <br>Graphics by Alec Gu & Rhona Lyu</i></h4>
-                    </header>
+                    <!-- </header> -->
 
                     <p>
                         The government will ensure at least two social workers in all secondary schools across Hong Kong starting this year, announced Financial Secretary Paul Chan Mo-po in the budget speech today. This comes after an alarming increase in student suicide rates
