--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -131,6 +131,15 @@
         .img_opacity {
             opacity: 1 !important;
         }
+        
+        hr {
+            margin-top: 0px;
+            *margin: 0;
+            border: 0;
+            color: white;
+            background-color: white;
+            height: 2px
+        }
     </style>
 </head>
 
@@ -182,13 +191,14 @@
             <!-- One -->
             <section id="one">
                 <div class="inner">
-                    <header class="major">
-                        <h2>Budget 2019/20: Tax reduction and financial relief <br/>measures not to be compromised despite lower revenue</h2>
-                        <h4><i>Reported by Jo Ng, King Woo, Vimvam Tong and Yetta Lam<br/>
-                            Edited by Rachel Yeo<br/>
+                    <!-- <header class="major"> -->
+                    <h2>Budget 2019/20: Tax reduction and financial relief <br>measures not to be compromised despite lower revenue</h2>
+                    <hr>
+                    <h4><i>Reported by Jo Ng, King Woo, Vimvam Tong and Yetta Lam<br>
+                            Edited by Rachel Yeo<br>
                             Graphics by Bonnie Yu and Brittany Wang
                             </i></h4>
-                    </header>
+                    <!-- </header> -->
 
                     <p>The government announced a number of financial relief measures in the budget speech today, despite a significant drop in the city’s annual surplus. </p>
                     <p>Salaries tax, tax under personal assessment and profits tax will be reduced by 75% with a ceiling of $20,000 this year, Financial Secretary Paul Chan Mo-po said. </p>
