--- a/BudgetPlan2019/health.html
+++ b/BudgetPlan2019/health.html
@@ -230,7 +230,7 @@
                             <div class="data_content">
                                 <!--Chart of HAAllocation-->
                                 <section class="Chart">
-                                    <div id="HAAllocation" style="min-width:400px;height:400px"></div>
+                                    <div id="HAAllocation" style="min-width: width 300px;height:400px"></div>
                                     <script src="HealthCare/HAAllocation.js"></script>
                                     <p style="font-family:Arial, Helvetica, sans-serif; font-size: 12px;text-align: center;line-height: 15px">
                                         The actual funding allocation from the Hospital Authority always surpasses the planned amount from budget. The percentage of fund allocation to HA remains between 9.9% to 11.6%.
