--- a/BudgetPlan2019/elderly.html
+++ b/BudgetPlan2019/elderly.html
@@ -80,9 +80,9 @@
                     <h2>Increasing elderly population <br>and government fails to increase resources for the elderly
                     </h2>
                     <hr>
-                    <h4><i>Reported by: Hailey Man, Karen Kwok, Brison Li, Fang Yi Chen<br>
+                    <h4><i>Reported by: Hailey Man, Karen Kwok, Brison Li & Fang Yi Chen<br>
                                 Edited by: Anna Kam<br>
-                                Data graphics by: Jack Lung, Judy Li
+                                Graphics by: Jack Lung & Judy Li
                                 </i></h4>
                     <!-- </header> -->
 
