--- a/BudgetPlan2019/health.html
+++ b/BudgetPlan2019/health.html
@@ -214,8 +214,9 @@
                     <h2>Budget 2019/20: Frontline public hospital staff to receive allowance boost
                     </h2>
                     <hr>
-                    <h4><i>Reported by Stephanie Ma,William Tsui, Kelly Zhao and Tomiris Urstembayeva
+                    <h4><i>Reported by Stephanie Ma,William Tsui and Tomiris Urstembayeva
                                 <br>Edited by Phoebe Lai
+			    <br>Graphics by Kelly Zhao
                             </i></h4>
                     <!-- </header> -->
                     <p>
