change student text

--- a/BudgetPlan2019/tax.html
+++ b/BudgetPlan2019/tax.html
@@ -224,29 +224,21 @@
 
                                         <h3>For students</h3>
                                         <!-- <img src="picture/student_table.png"></img> -->
-                                        <table id="benefit_for_elderly">
+                                        <table id="benefit_for_students" style="width:100%">
                                             <tr>
                                                 <th>2019-2020</th>
                                                 <th>2018-2019</th>
 
                                             </tr>
                                             <tr>
-                                                <td>Extra allowance equivalent to <b>one month</b> of the standard rate of Comprehensive Social Security Assistance, Old Age Allowance, Old Age Living Allowance or Disability Allowance</td>
-                                                <td>Extra allowance equivalent to <b>two months</b> of the standard rate of Comprehensive Social Security Assistance, Old Age Allowance, Old Age Living Allowance or Disability Allowance</td>
+                                                <td>Needy students from pre-primary to post-secondary level will be eligible for <b>$2500</b> cash handout for study</td>
+                                                <td>Needy students from pre-primary to post-secondary level will be eligible for <b>$2000</b> cash handout for study</td>
                                             </tr>
                                             <tr>
-                                                <td>A <b>one-off additional $1,000</b> in vouchers for people who are eligible for the Elderly Health Care Voucher Scheme
-                                                </td>
-                                                <td>A <b>one-off additional $1,000</b> in vouchers for people who are eligible for the Elderly Health Care Voucher Scheme
-                                                </td>
+                                                <td>The examination fee of 2020’s DSE students will be waived</td>
+                                                <td>The examination fee of 2019’s DSE students will be waived</td>
                                             </tr>
 
-                                            <tr>
-                                                <td>The accumulation limit of the Elderly Health Care Voucher Scheme <b>increase to $8,000</b>
-                                                </td>
-                                                <td>The accumulation limit raises to <b>$5,000</b>, which originally is $4,000.
-                                                </td>
-                                            </tr>
                                         </table>
                                     </div>
 
