--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -29,6 +29,7 @@
     <link rel="shortcut icon" href="picture/HK$.png" type="image/x-icon" />
 </head>
 
+
 <body class="is-preload">
 
     <!-- Wrapper -->
@@ -163,14 +164,16 @@
                     <header class="major">
                         <h2>About this project</h2>
                     </header>
-                    <p>The project is conducted by 
-			<br>All TYR reporters and editors,
-			<br>DMC team: Alec Gu, Bonnie Yu, Kelly Zhao, Brittany Wang, Judy Li, Jack Lung, Rhona Lyu.
+                    <p>The project is conducted by
+                        <br>All TYR reporters and editors,
+                        <br>DMC team: Alec Gu, Bonnie Yu, Kelly Zhao, Brittany Wang, Judy Li, Jack Lung, Rhona Lyu.
                         <br>
                         <br><b>The Young Reporter (TYR) </b>is an English news publication produced by international journalism students at Hong Kong Baptist University.
                         <br>Email: <a href="mailto:tyrmagazine@gmail.com">tyrmagazine@gmail.com</a></p>
                     <b>Data and Media Communication team</b> will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
-                    <br>Email: <a href="mailto:hkbudmc@gmail.com">hkbudmc@gmail.com</a>
+                    <br>Email: <a href="mailto:hkbudmc@gmail.com">hkbudmc@gmail.com</a><br/><br/>
+                    <div class="fb-like" data-href="https://hkbujourdmc.github.io/BudgetPlan2019/index.html" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true" data-colorscheme="dark"></div>
+
                 </div>
             </section>
 
@@ -231,20 +234,20 @@
 
         <!-- Footer -->
         <footer id="footer">
-                <div class="inner">
-                    <ul class="icons" style="margin: auto; text-align: center">
-                        <!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-                        <li><a href="https://www.facebook.com/hkbutyr/" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
-                        <li><a href="https://www.instagram.com/hkbutyr/" class="icon alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
-                        <li><a href="https://github.com/hkbujourdmc/hkbujourdmc.github.io" class="icon alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-                    </ul>
-                    <br>
-                    <ul class="copyright" style="margin: auto; text-align: center">
-                        <li>&copy; 2019</li>
-                        <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-                    </ul>
-                </div>
-            </footer>
+            <div class="inner">
+                <ul class="icons" style="margin: auto; text-align: center">
+                    <!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li> -->
+                    <li><a href="https://www.facebook.com/hkbutyr/" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/hkbutyr/" class="icon alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://github.com/hkbujourdmc/hkbujourdmc.github.io" class="icon alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+                </ul>
+                <br>
+                <ul class="copyright" style="margin: auto; text-align: center">
+                    <li>&copy; 2019</li>
+                    <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+                </ul>
+            </div>
+        </footer>
 
     </div>
 
@@ -258,5 +261,7 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+<div id="fb-root"></div>
+<script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
 
 </html>
