--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -125,7 +125,7 @@
 										<img src="picture/elderly.jpg" alt="" />
 									</span>
                     <header class="major">
-                        <h3><a href="elderly.html" class="link">ELderly</a></h3>
+                        <h3><a href="elderly.html" class="link">Elderly</a></h3>
 
                     </header>
                 </article>
