Facebook like button adjustment

--- a/BudgetPlan2019/index.html
+++ b/BudgetPlan2019/index.html
@@ -172,8 +172,7 @@
                         <br>Email: <a href="mailto:tyrmagazine@gmail.com">tyrmagazine@gmail.com</a></p>
                     <b>Data and Media Communication team</b> will showcase advanced data analysis and journalism skills to be the effective storyteller in this collection.
                     <br>Email: <a href="mailto:hkbudmc@gmail.com">hkbudmc@gmail.com</a><br/><br/>
-                    <div class="fb-like" data-href="https://hkbujourdmc.github.io/BudgetPlan2019/index.html" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true" data-colorscheme="dark"></div>
-
+                    <div class="fb-like" data-href="https://hkbujourdmc.github.io/BudgetPlan2019/index.html" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
                 </div>
             </section>
 
